syntax = "proto3";
package DomainServices.CaseService;
option csharp_namespace = "DomainServices.CaseService.Contracts";

import "GrpcDate.proto";

message WorkflowTask {
	int32 TaskId = 1;
	int32 TaskProcessId = 2;
	int32 TypeId = 3;
	string Name = 4;
	int32 StateId = 5;
	cis.types.GrpcDate CreatedOn = 6;
}

message GetTaskListRequest {
	int64 CaseId = 1;
}

message GetTaskListResponse {
	repeated WorkflowTask Tasks = 1;
}