syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "Parameters/SalesArrangementParametersMortgage.proto";
import "Parameters/SalesArrangementParametersDrawing.proto";
import "Parameters/SalesArrangementParametersGeneralChange.proto";
import "Parameters/SalesArrangementParametersHUBN.proto";
import "Parameters/SalesArrangementParametersCustomerChange.proto";
import "Parameters/SalesArrangementParametersCustomerChange3602.proto";
import "Parameters/SalesArrangementParametersRetention.proto";
import "google/protobuf/wrappers.proto";

message CreateSalesArrangementRequest {
	// ID Case v ramci ktereho ma byt SA zalozen
	int64 CaseId = 1;

	// Druh SA
	int32 SalesArrangementTypeId = 2;

	// ID modelace, ktera je spojena s timto SA - neni povinne
	google.protobuf.Int32Value OfferId = 3;
	
	string ContractNumber = 4;

	google.protobuf.Int32Value State = 5;

	google.protobuf.StringValue PcpId = 6;

	google.protobuf.Int32Value TaskProcessId = 7;
	
	oneof Data {
        SalesArrangementParametersMortgage Mortgage = 20;
		SalesArrangementParametersDrawing Drawing = 21;
		SalesArrangementParametersGeneralChange GeneralChange = 22;
		SalesArrangementParametersHUBN HUBN = 23;
		SalesArrangementParametersCustomerChange CustomerChange = 24;
		SalesArrangementParametersCustomerChange3602 CustomerChange3602A = 25;
		SalesArrangementParametersCustomerChange3602 CustomerChange3602B = 26;
		SalesArrangementParametersCustomerChange3602 CustomerChange3602C = 27;
		SalesArrangementParametersRetention Retention = 28;
    }
}

message CreateSalesArrangementResponse {
	// ID nove zalozeneho SA
	int32 SalesArrangementId = 1;
}
